# rust-tte

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .jscpd.json  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  404.html  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  authors.html  authors.md  clippy.toml  deny.toml  index.html  index.md  llms.txt  pkgdown.yml  rust-toolchain.toml  rustfmt.toml  search.json  sitemap.xml
.claude/: settings.json
.claude/commands/: check-secrets.md  clean-code.md
.claude/hooks/: block-secrets.sh  enforce-project-rules.sh  git-safety-check.sh  hook-self-protection.sh  protect-immutable-paths.sh  rust-fmt.sh
.claude/rules/: clean-code.md  determinism.md  git-workflow.md  rust-style.md  security.md  testing.md
.claude/semgrep/: agent-antipatterns.yaml
.claude/skills/rust-best-practices/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_fixture_mismatch.yml  config.yml  feature_or_scope.yml
.github/workflows/: ci.yml  extdata-drift.yml  markdownlint.yml  phase-5.yml  pkgdown.yml  quality.yml  r-binding.yml  secret-scan.yml
articles/: index.html  index.md  tters.html  tters.md
bench/: .gitkeep  README.md  gen.R  golden_roundtrip.R  prep.R  run_bench.sh  run_golden.sh
bench/runner/: Cargo.toml
bench/runner/src/: main.rs
bindings/tters/: .Rbuildignore  .prepare  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  cleanup  cleanup.win  configure  configure.win
bindings/tters/R/: extendr-wrappers.R  te-datastore-tters.R  tters-package.R
bindings/tters/inst/: CITATION  NOTICE
bindings/tters/src/rust/: Cargo.toml  document.rs
bindings/tters/src/rust/src/: frame.rs  lib.rs
crates/tte-expand/: Cargo.toml  README.md
crates/tte-expand/benches/: certificate.rs  expand.rs  support.rs
crates/tte-expand/src/: fit.rs  lib.rs
crates/tte-expand/tests/: itt.rs  pp.rs  weights.rs  weights_fit.rs
docs/: README.md
docs/001-initial-ideations/: 001-project-memories.md  002-research-simulation-inputs.md  003-project-plan.md  004-prework-fixtures.md
docs/002-phase-0-scaffold/: 001-phase-0-summary.md
docs/003-phase-1-itt-expansion/: 001-phase-1-summary.md
docs/004-phase-2-pp-censoring/: 001-phase-2-summary.md
docs/005-phase-3-weight-application/: 001-phase-3-summary.md
docs/006-phase-4-extendr-binding/: 001-phase-4-summary.md
docs/007-phase-5-benchmark-certificate/: 001-phase-5-summary.md
docs/008-phase-6-weights-in-rust/: 001-phase-6-summary.md
docs/009-phase-7-expose-weight-fitting/: 001-phase-7-summary.md
docs/010-phase-8-in-memory-frame-io/: 001-phase-8-summary.md
docs/011-phase-9-exact-wide-integer-frame-io/: 001-phase-9-summary.md
docs/012-phase-10-distribution-readiness/: 001-phase-10-summary.md
docs/013-phase-11-te-datastore-backend/: 001-phase-11-summary.md
fixtures/: MANIFEST.json  README.md
fixtures/edge/: expected_E02_id4_canonical_pp.parquet  expected_E03_event_at_baseline_itt.parquet  expected_E05_never_treats_itt.parquet  expected_E06_switch_then_back_itt.parquet  expected_E07_last_period_only_pp.parquet  input_E01_single.parquet  input_E02_id4_canonical.parquet  input_E07_last_period_only.parquet  input_E08_ties.parquet  input_E09_max_fanout.parquet
fixtures/golden/: .gitkeep
fixtures/scenarios/: expected_common_pp.parquet  expected_heavy_censoring_itt.parquet  expected_heavy_censoring_pp.parquet  expected_high_switching_itt.parquet  expected_high_switching_pp.parquet  expected_rare_event_itt.parquet  expected_rare_event_pp.parquet  expected_rare_initiation_itt.parquet  expected_rare_initiation_pp.parquet  expected_short_followup_itt.parquet  expected_short_followup_pp.parquet  expected_strong_confounding_itt.parquet  expected_strong_confounding_pp.parquet  expected_ultra_rare_event_itt.parquet  expected_ultra_rare_event_pp.parquet  input_common.parquet  input_frequent_switching.parquet  input_heavy_censoring.parquet  input_high_switching.parquet  input_moderate_switching.parquet  input_rare_event.parquet  input_rare_initiation.parquet  input_short_followup.parquet  input_strong_confounding.parquet  input_ultra_rare_event.parquet
fixtures/weights/: MANIFEST_weights.json  expected_data_censored_pp_weighted.parquet  expected_frequent_switching_pp_weighted.parquet  expected_high_switching_pp_weighted.parquet  expected_moderate_switching_pp_weighted.parquet  input_data_censored_itt_weights.parquet  input_data_censored_pp_weights.parquet  input_frequent_switching_pp_weights.parquet  input_high_switching_pp_weights.parquet  input_moderate_switching_pp_weights.parquet
news/: index.html  index.md
oracle/: 00_setup.R  10_simulate.R  20_scenarios.R  30_edge_cases.R  40_dump_fixtures.R  41_dump_pp.R  42_dump_weights.R  50_golden_pipeline.R  60_harvest_upstream.R  README.md  run_all.R
reference/: expand_df.html  expand_df.md  expand_parquet.html  expand_parquet.md  expand_trial.html  expand_trial.md  expand_trial_df.html  expand_trial_df.md  expand_trial_weighted.html  expand_trial_weighted.md  expand_trial_weighted_df.html  expand_trial_weighted_df.md  expand_trial_weighted_fitted.html  expand_trial_weighted_fitted.md  expand_trial_weighted_fitted_df.html  expand_trial_weighted_fitted_df.md  expand_trials_tters.html  expand_trials_tters.md  expand_weighted_df.html  expand_weighted_df.md  expand_weighted_fitted_df.html  expand_weighted_fitted_df.md  expand_weighted_fitted_parquet.html  expand_weighted_fitted_parquet.md  expand_weighted_parquet.html  expand_weighted_parquet.md  fit_trial_weights.html  fit_trial_weights.md  fit_trial_weights_df.html  fit_trial_weights_df.md  fit_weights_df.html  fit_weights_df.md  fit_weights_parquet.html  fit_weights_parquet.md  index.html  index.md  save_to_tters.html  save_to_tters.md  tters-package.html  tters-package.md  (+1 more)
report/: .gitkeep  benchmark.md  benchmark_data.md  certificate.md  golden.md
tools/r-universe/: README.md  packages.json
(+51 files in other folders)
