[workspace]
resolver = "3"
members = ["crates/tte-expand"]
# The R binding's Rust crate (bindings/tters/src/rust/Cargo.toml) declares an
# empty `[workspace]` table, making it its OWN workspace root. That is required
# so `R CMD INSTALL` builds a self-contained crate with its own Cargo.lock and
# the package can be `cargo vendor`ed for CRAN. It is therefore deliberately NOT
# a member here, and is excluded so cargo never tries to absorb it.
exclude = ["bindings/tters"]

[workspace.package]
edition = "2024"
# MSRV. Edition 2024 floors at 1.85, but the polars 0.54 dependency tree pulls
# crates (simd-json, sysinfo) that require Rust 1.88 — so 1.88 is the real floor
# (confirmed from the resolved Cargo.lock). DISTINCT from the pinned dev/CI
# toolchain (rust-toolchain.toml = 1.95.0). Keep in sync with the MSRV CI job and
# clippy.toml.
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/oldschoolcool2/rust-tte"
authors = ["Michael Batech <oldschoolcool@gmail.com>"]

[workspace.dependencies]
# Polars pinned to 0.54 (latest stable on crates.io = 0.54.4, verified 2026-06-29);
# the exact resolved version is locked in Cargo.lock. default-features = false
# keeps the build off the nightly `simd` feature (pola-rs#26348).
#
# Feature notes — the engine works on integer + categorical columns, and the input
# has NO datetime columns, so temporal dtypes are deliberately absent:
#   * `dtype-categorical` covers R factor columns (e.g. catvarA/B/C); the default
#     i32/i64/f64/bool/str dtypes cover everything else the Oracle parquet emits.
#   * `dtype-full` is intentionally AVOIDED: its temporal dtypes (dtype-date /
#     dtype-datetime / dtype-time) activate a broken `Strptime` lowering arm in
#     polars-stream 0.54.4 (it references an unimported `IRStringFunction` and
#     fails to compile). polars-stream is still pulled transitively
#     (parquet -> streaming -> lazy) but compiles cleanly once those dtypes are off.
# Grow this list — re-checking that it still compiles — as the engine needs more.
polars = { version = "0.54", default-features = false, features = [
    "lazy",
    "parquet",
    "dtype-categorical",
    "is_in",
    "cum_agg",
] }
thiserror = "2.0"

# Perf tuning for the release/bench profile of a data-expansion engine. panic is
# intentionally left at the default "unwind" so criterion benches and any FFI
# caller can unwind across the boundary.
[profile.release]
lto = "thin"
codegen-units = 1

# --- Lint LEVELS (members opt in via `[lints] workspace = true`) -------------
[workspace.lints.rust]
unsafe_code = "forbid"            # belt-and-suspenders with #![forbid(unsafe_code)]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Groups at priority -1 so the specific overrides below win.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Determinism / numeric-exactness hardening (the bit-for-bit invariant).
float_cmp = "deny"
float_cmp_const = "deny"
lossy_float_literal = "deny"
cast_possible_truncation = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
cast_lossless = "warn"

# Panic hygiene in library code (relaxed for tests via clippy.toml).
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

# Docs completeness for a published, verified crate.
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Tame noisy pedantic/nursery/cargo lints that fight idiomatic Polars code.
# `multiple_crate_versions` MUST be allowed: Polars' transitive tree carries
# duplicate versions, and clippy::cargo would otherwise fail `-D warnings` CI.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
multiple_crate_versions = "allow"
