[package]
name = "tte-expand"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Verified, high-performance data-expansion stage for sequential target trial emulation (Rust + Polars), reproducing R TrialEmulation output bit-for-bit."
readme = "README.md"
keywords = ["epidemiology", "target-trial", "polars", "causal-inference"]
categories = ["science", "data-structures"]
# Phase 5 declares its bench targets explicitly below; disable auto-discovery so
# the shared `benches/support.rs` generator is not mistaken for its own bench.
autobenches = false

# docs.rs builds default features only; the in-Rust IPW solver (`weights-fit`) is
# behind a feature flag, so document every feature to surface the full public API.
[package.metadata.docs.rs]
all-features = true

[dependencies]
polars = { workspace = true }
thiserror = { workspace = true }

# Phase 6 (weight fitting, behind the optional `weights-fit` feature): a mature,
# pure-Rust binomial-logit solver to fit the IPW switch/censor models, producing
# the per-(id,period) factor table Phase 3 consumes. Chosen over linfa-logistic /
# ndarray-glm after an empirical bake-off vs R `glm`: smartcore's unregularised
# (`alpha = 0`) deterministic L-BFGS reproduced R's IRLS MLE to ~1.6e-8 on every
# fixture model, it is the smallest tree (permissive Apache-2.0/MIT deps, NO native
# BLAS/LAPACK or C linkage — unlike ndarray-glm's system OpenBLAS, a cross-machine
# FP-reproducibility hazard), and `cargo deny` passes. We bind only its logistic
# fit; robust/sandwich variance and the MSM stay in R (out of scope, like v1).
# `optional = true` keeps it out of the default build — the `tters` R binding
# (which never fits weights) stays lean and its lockfile untouched; the engine's
# `--all-features` CI exercises the fit. default-features = false drops smartcore's
# serde/datasets features (smaller tree, no extra I/O surface).
smartcore = { version = "0.3.2", default-features = false, optional = true }

[features]
# Phase-6 weight FITTING (binds smartcore). Off by default so the R binding and a
# plain `cargo build` stay solver-free; enable with `--features weights-fit` (root
# CI runs `--all-features`, so it is always covered there).
weights-fit = ["dep:smartcore"]

# Integration tests can already use `polars` via the normal dependency above, so
# no dev-dependency duplication is needed for them.

[dev-dependencies]
# Phase-5 benchmark + reproducibility-certificate harness. All dev-only: none
# affect the library build or the public API, and the `tters` binding (its own
# excluded workspace + lockfile) never sees them.
#   * criterion  — runtime micro-benchmarks of `expand` / `apply_weights`; relies
#     on the workspace `panic = "unwind"` (root Cargo.toml) to unwind across the
#     bench harness.
#   * serde_json — parse the Oracle `MANIFEST.json` (provenance + per-fixture
#     digests) for the certificate, instead of hand-rolling JSON.
#   * sha2       — recompute each committed fixture's SHA-256 to prove it still
#     matches the manifest (differential integrity) with no external tool, so
#     `make verify` stays pure-cargo and reproducible on any platform.
criterion = "0.5"
serde_json = "1"
sha2 = "0.11"

# Explicit bench targets (autobenches = false). `expand` is the criterion
# harness; `certificate` (added with its source) is a plain generator binary.
[[bench]]
name = "expand"
harness = false

[[bench]]
name = "certificate"
harness = false

[lints]
workspace = true
