[package]
name = "tters"
version = "0.1.0"
edition = "2021"
# MSRV is driven transitively by Polars 0.54.4 (via the tte-expand path dep),
# which requires the latest stable. Keep in sync with the root workspace's
# rust-version = "1.95" and clippy.toml's msrv. (Scaffold said 1.71, but Polars
# cannot build on 1.71 — that was a pre-build estimate.)
rust-version = "1.95"
publish = false

[lib]
name = "tters"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "document"
path = "document.rs"
bench = false

[dependencies]
extendr-api = "0.9"
# Path dependency on the verified core crate. Relative to THIS Cargo.toml
# (bindings/tters/src/rust/): four levels up reaches the repo root, then
# crates/tte-expand.
#
# Phase 7 enables the `weights-fit` feature so the binding can FIT the IPW
# switch/IPCW models in Rust end-to-end (Phase 6 surface), not merely apply a
# pre-computed factor table. This pulls `smartcore` — the pure-Rust binomial-logit
# solver already justified in Phase 6 (no native BLAS/LAPACK, permissive deps) —
# into the binding's dependency tree, so `src/rust/Cargo.lock` now records it.
# That lockfile change is the deliberate converse of Phase 6, which kept this
# binding lockfile solver-free.
tte-expand = { path = "../../../../crates/tte-expand", features = ["weights-fit"] }

[profile.release]
lto = true
codegen-units = 1
# NOTE: do NOT set panic = "abort". extendr turns Rust panics into R errors via
# catch_unwind, which requires the default unwind strategy.

# Empty [workspace] table => this crate is its OWN workspace root, detached from
# the repo-root workspace. `R CMD INSTALL` (cargo build --manifest-path=rust/
# Cargo.toml) then builds a self-contained crate with its own Cargo.lock
# (commit src/rust/Cargo.lock). The path dependency above still resolves in the
# monorepo. This MUST stay consistent with `exclude` in the root Cargo.toml.
[workspace]
